[tool.poetry]
name = "pond-cdp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

packages = [{include = "coinbase_agentkit"}]  # <-- THIS LINE IS VERY IMPORTANT

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
